# joey

./: .gitignore  LICENSE  MANIFEST.in  README.md  manage.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test.yml
joey/: __init__.py  __main__.py  application.py  cli.py  db.py  serializers.py
joey/cli/: __init__.py  utils.py
joey/cli/templates/app/: models.py  routes.py
joey/cli/templates/project/: alembic.ini  asgi.py
joey/cli/templates/project/migrations/: env.py
joey/cli/templates/project/settings/: __init__.py  common.pyt  common.yml  development.pyt
joey/middleware/: session.py
joey/middleware/session/: __init__.py  middleware.py  models.py
joey/middleware/session/backend/: base.py  fernet.py
joey/templates/: routes.template
joey/templates/app/: routes.py
joey/templates/project/: asgi.py
joey/templates/project/migrations/: env.py  script.py.mako
joey/templates/project/settings/: __init__.py  common.pyt  common.yml  development.pyt
joey/utils/: __init__.py  middleware.py  router.py  timezone.py
tests/: test_auto_id.py
