[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pylint.master]
jobs = 0
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    # "too-few-public-methods",
    # "invalid-name",
]

[tool.pylint.format]
max-line-length = 120
