[metadata]
name = joey
version = 0.5.0
description = Async web framework on top of fastapi and orm
long_description = file: README.md
keywords =
    joey
    web
    framework
    orm
    fastapi
url = https://github.com/pinecrew/joey
author = pinecrew
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    

[options]
packages = find_namespace:
include_package_data = True
python_requires = >=3.8, <4

install_requires =
    alembic
    fastapi
    orm==0.3.1
    pytz
    mako
    click
    pyyaml


[options.extras_require]
dev =
    black
    isort
    pylint
    pytest
    aiosqlite

sessions =
    pyjwt==1.7.1
    cryptography==3.0

[options.entry_points]
console_scripts =
    joey = joey.cli:main
